--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/crzn24/employee-tracker-sql/issues"
   },
-  "homepage": "https://github.com/crzn24/employee-tracker-sql#readme"
+  "homepage": "https://github.com/crzn24/employee-tracker-sql#readme",
+  "dependencies": {
+    "console.table": "^0.10.0",
+    "inquirer": "^8.2.4",
+    "mysql2": "^2.3.3"
+  }
 }
